src/styles/global.scss
/* ... */
//end separate styling of the navbar for the homepage

.navbar-item {
  font-size: $size-5;
  &:focus {
    background-color: transparent;
  }
  &.custom {
    font-size: $size-6;
  }
  &:hover {
    background: $nav-hover !important;
    border-radius: 8px;
  }
}
.navbar-dropdown.open {
  display: block;
}

@media only screen and (max-width: 1300px) {
  .navbar-item {
    padding: 0 5px !important;
    font: {
      size: .9rem;
    }
  }
}

@media only screen and (max-width: $desktop) {
  $navbar-background-color: $dark-bg-color;
  $navbar-item-color: $light-color;
  $navbar-dropdown-arrow: $light-color;
  .navbar {
    padding: 10px;
    .navbar-burger {
      span {
        width: 22px;
        height: 3px;
        border-radius: 4px;
        &:nth-child(2) {
          top: calc(50% + 1px);
          left: calc(50% - 3px);
        }
        &:nth-child(3) {
          top: calc(50% + 8px);
        }
      }
      &:hover {
        color: $light-color !important;
      }
    }
    img.logo {
      width: 99px;
      max-width: 99px;
      height: 50px;
      max-height: 50px;
    }

    .navbar-menu {
      background-color: $dark-bg-color !important;
      border-radius: 8px;
      &.is-active {
        margin: 10px 0px;
        padding: 20px 0px;
        button {
          margin: 0 0 10px 10px;
          padding: 10px !important;
        }
        .navbar-start {
          .navbar-item {
            padding: 10px !important;
            font: {
              size: 1rem;
            }
            color: $light-color;
          }
        }
        .navbar-end {
          display: flex;
          margin: 10px 0 0;
          border-top: 1px solid rgba(255, 255, 255, 0.1);
          a {
            padding: 10px 0 0;
            .logo-associations {
              img {
                width: 139px;
                margin: 13px;
              }
            }
          }
        }
      }
    }
    .navbar-item.has-dropdown {
      .navbar-link {
        &:hover,
        &.active {
          background-color: $dark-bg-hover-color;
          color: $light-color;
        }
        &::after {
          transition: 0.3s;
          border-color: $light-color !important;
        }
      }
      .navbar-dropdown {
        display: none;
        .custom.navbar-item {
          color: $dark-font-color !important;
          &:hover {
            background-color: $dark-bg-hover-color;
            color: $light-color !important;
          }
        }
      }
      &.is-open {
        .navbar-link {
          background-color: $dark-bg-hover-color;
          color: $light-color;
          &::after {
            transform: rotate(135deg);
            transition: 0.3s;
          }
        }
        .navbar-dropdown {
          display: block;
        }
      }
    }
    .navbar-end {
      align-items: center !important;
    }
    .navbar-end > a.navbar-item:hover {
      background-color: $text !important;
    }
  }
  
  .home-hero-banner {
    .hero-body {
      .has-text-right {
        text-align: start !important;
      }
    }
  }

}

@media screen and (min-width: $desktop) {
  .navbar-end {
      align-items: center !important;
  }
}

.navbar-brand {
  .navbar-item {
    height: 50px !important;
    padding: 15px;
    width: 130px;
    .logo > img {
      height: 40px;
      max-height: 40px;
      margin-top: 5px;
    }
  }
}
/*
 * END navbar style
 */

.dflex {
  display: flex;
}

/*
 * END footer style
 */
.notification {
  margin-bottom: 0 !important;
}
.title.gradient-underline {
  margin: 1rem 0 !important;
  border-top: 0;
  border-left: 0;
  border-right: 0;
  border-bottom: 2px #e2011b solid;
  -webkit-border-image: linear-gradient(
    to right,
    $title-color 70%,
    rgba(146, 2, 9, 0)
  );
  border-image: linear-gradient(to right, $title-color 70%, rgba(146, 2, 9, 0));
  border-image-slice: 1;
}

a.internal-link,
a.external-link,
a.mail-link {
  text-decoration: underline;
}
a.external-link {
  background-position: right center;
  background-repeat: no-repeat;
  background-image: linear-gradient(transparent, transparent),
    url('/img/external-link.png');
  background-size: 9px;
  padding-right: 13px;
}
a.ext-as-int-link {
  background-image: none;
}

ul.unordered {
  list-style-type: disc;
}
ol.ordered,
ul.unordered {
  margin-block-start: 1em;
  margin-block-end: 1em;
  margin-inline-start: 0;
  margin-inline-end: 0;
  padding-inline-start: 40px;
  li:not(:first-child) {
    margin-top: 10px;
  }
}

div.card.custom-card {
  box-shadow: none;
  cursor: pointer;
  padding: 0.5rem 0;
  &:hover {
    box-shadow: 0 0.125em 0.25em rgba(10, 10, 10, 1/3);
  }
  .card-content {
    padding-bottom: 0;
  }
  .card-image {
    display: flex;
    justify-content: center;
  }
  .card-title {
    color: $title-color;
    font-weight: 600;
    text-align: center;
    text-decoration: underline;
  }
}
div.card.species {
  cursor: pointer;
  padding: 0;
  width: 100px;
  &:hover {
    box-shadow: 0 0 1em -0.125em rgba(226, 1, 27, 0.9);
  }
  .card-image {
    display: flex;
    justify-content: center;
  }
}

pre {
  border: 1px solid #999;
  border-radius: 4px;
  & > code {
    border: none;
  }
}
$table-cell-border-width: 0;
.card.search-input {
  max-width: 500px;
}

th {
  -ms-user-select: none;
  -webkit-user-select: none;
}
/* ... */

